# mosaic

./: .gitignore  README.md  TOOL_PROTOCOL.md  install.sh  main.py  mosaic.sh  pyproject.toml  repro_markup_error.py  requirements.txt  test_agent.py  test_stream.py
app/: settings.gradle.kts
benchmark/: README.md  requirements.txt  runner.py
cli/: .gitignore  MANIFEST.in  README.md  get-pip.py  install.sh  pyproject.toml  requirements.txt  setup.py
cli/mosaic_cli/: __init__.py  main.py  styles.css
cli/mosaic_cli/core/: agent.py  config.py  memory.py  parser.py  prompt.py  session.py  stream.py  updater.py
cli/mosaic_cli/core/components/: __init__.py  chat.py  file_tree.py  history.py  memory_sidebar.py  todo.py  tool.py  tools_sidebar.py
cli/mosaic_cli/core/tools/: base.py  create_todo.py  delete_file.py  delete_todo.py  edit_file.py  get_todo_list.py  list_directory.py  read_file.py  recall_memories.py  registry.py  run_command.py  store_memory.py  sync_todo_list.py  update_todo.py  utils.py  write_file.py
cli/mosaic_cli/framework/llm/: base.py  huggingface.py  llama_provider.py  lmstudio.py  openai.py  openrouter.py
cli/tests/: README.md  conftest.py  test_agent.py  test_e2e.py  test_e2e_advanced.py  test_e2e_live.py  test_e2e_mosaic.py  test_features.py  test_file_tree.py  test_history_rendering.py  test_lmstudio_refresh.py  test_memory.py  test_modes.py  test_parser.py  test_prompt.py  test_providers.py  test_safety.py  test_sidebar_layout.py  test_snapshots.py  test_todo_tools.py  test_tools_utils.py  test_ux_features.py  validate_integration.py
cli/tests/tui_microsoft/: package-lock.json  smoke.test.ts
cli/tests/tui_microsoft/.tui-test/cache/: package.json  smoke.test.js  smoke.test.js.map
electron/: .gitignore  electron.vite.config.ts  nuxt.config.ts  package-lock.json  package.json  tauri_info.txt  tsconfig.electron.json
mosaic/: README.md  gleam.toml  manifest.toml
mosaic-back/: gleam.toml  manifest.toml
mosaic-front/: electron.vite.config.ts  package-lock.json  package.json
src/: main.py
tauri/: .gitignore  package-lock.json  package.json  tauri_info_utf8.txt
tests/: test_agent.py  test_framework.py  test_initialization.py  test_multi_step.py  test_streaming.py  test_tools.py  test_ui_components.py
vscode/: .gitignore  .vscodeignore  PUBLISHING.md  README.md  mosaic-vscode-0.0.1.vsix  package-lock.json  package.json  prompt.txt  tsconfig.benchmark.json  tsconfig.json
(+688 files in other folders)
