[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic-tui"
version = "0.1.0"
description = "A premium Agentic TUI for autonomous coding"
dependencies = [
    "textual",
    "httpx",
    "rich",
    "python-dotenv",
]

[project.scripts]
mosaic = "mosaic_cli.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["mosaic_cli*"]
namespaces = false
