[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic-tui"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
description = "A premium Agentic TUI for autonomous coding"
dependencies = [
    "textual",
    "httpx",
    "rich",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-textual-snapshot",
    "ruff",
]

[project.scripts]
mosaic = "mosaic_cli.main:run"

[tool.setuptools.package-data]
mosaic_cli = ["*.css"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mosaic_cli*"]
namespaces = false
